Fix readability button height on Firefox. Closes #148

--- a/public/stylesheets/sass/darkblog.scss
+++ b/public/stylesheets/sass/darkblog.scss
@@ -145,6 +145,10 @@ blockquote {
   top: 1px;
 }
 
+#readabilityEmbedContainer, #readabilityEmbedIFrame {
+  height: 23px !important;
+}
+
 header {
   @include box-shadow(0px, 0px, 5px, black);
 
